feat: Add generic array type conversion system with external configuration
- Add ConversionManager class for handling array type conversions
- Create generic conversions.yaml with support for NumPy, PyTorch, Pandas
- Implement server-side argument conversion for proper array handling
- Fix NumPy array serialization issues in MCP tool chaining
- Add configurable error handling and argument mapping
- Move from example-specific to package-level generic configuration
- Support tool chaining with USE_OUTPUT_FROM_ placeholders
- Add comprehensive logging and debug output
- Update examples to use default conversion system

Resolves: ufunc 'subtract' did not contain a loop with signature matching types error

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,12 @@ classifiers = [
 ]
 license = {text = "MIT"}
 dependencies = [
-  "typer"
+  "typer",
+  "rich",
+  "pyyaml",
+  "fastapi",
+  "uvicorn[standard]",
+  "requests"
 ]
 requires-python = ">= 3.10"
 
