refactor: Rename example directories from _surfer to _weaver
- Rename number_surfer to number_weaver
- Rename file_system_surfer to file_system_weaver
- Update all references and comments in configuration files
- Maintain consistent naming convention across examples

--- a/examples/number_weaver/client_config.yaml
+++ b/examples/number_weaver/client_config.yaml
@@ -1,4 +1,4 @@
-# Number Surfer Client Configuration
+# Number Weaver Client Configuration
 # This shows how to configure the client for numpy-based statistical analysis
 
 llm:
